@@ -2,6 +2,7 @@ Revision history for Perl module TestRail::API
 
 0.039 2017-02-20 TEODESIAN
     - Fix issue where follow_post_redirect could not be passed to constructor
+    - Add getRunResults Method in TestRail::API
 
 0.038 2017-01-23 TEODESIAN
     - Optimize TestRail::Utils::Find::getResults and testrail-results
